Fix bottom scrollbar

--- a/visualizer/css/main.css
+++ b/visualizer/css/main.css
@@ -11,6 +11,7 @@ body {
 
   min-width: 600px;
   display: grid;
+  overflow: hidden;
 
   font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
     "Lucida Sans", Arial, sans-serif;
